--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,7 +2,7 @@ name: GitHub Metrics
 
 on:
   schedule:
-    - cron: "0 */12 * * *" 
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
@@ -14,17 +14,17 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.METRICS_TOKEN }}
+          committer_branch: main
+          filename: metrics.svg
+
           user: egemengzr
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Europe/Istanbul
-          
-          repositories_affiliations: owner, collaborator, organization_member
-          repositories_private: yes
+          debug: no
 
-          filename: metrics.svg
-          committer_branch: main
-          committer_message: "chore: update metrics (private included)"
+          repositories_affiliations: owner, collaborator, organization_member
 
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
